5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4010/executions/1573_1331.log
== TEST (2019-03-11 15:29:33) 
-- CODE:
print(50//3)(50 % 3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(50//3)(50 % 3)
TypeError: 'NoneType' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:29:58) 
-- CODE:
print(50//3 50 % 3))
-- ERROR:
File "XXXX", line 1
    print(50//3 50 % 3))
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:30:03) 
-- CODE:
print(50//3 50 % 3)
-- EXECUTION TIME:
0.272462
-- ERROR:
  File "/home/codebench/codes/1573/1331/main.py", line 1
    print(50//3 50 % 3)
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:31:41) 
-- CODE:
print(50//3 50%3)
-- ERROR:
File "XXXX", line 1
    print(50//3 50%3)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:31:48) 
-- CODE:
print(50//3 50 % 3)
-- ERROR:
File "XXXX", line 1
    print(50//3 50 % 3)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:31:57) 
-- CODE:
print(50//3 50 % 3))
-- ERROR:
File "XXXX", line 1
    print(50//3 50 % 3))
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:32:05) 
-- CODE:
print(50//3 50 % 3)
-- ERROR:
File "XXXX", line 1
    print(50//3 50 % 3)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:33:24) 
-- CODE:
print(50//3)
print(50 % 3)
-- OUTPUT:
16
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:33:27) 
-- CODE:
print(50//3)
print(50 % 3)
-- EXECUTION TIME:
0.161732
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
